@@ -1,3 +1,9 @@
+2014-02-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/asstm8/stm8mch.c,
+	  src/stm8/gen.c:
+	  Apply patch #215 by Ben Shi to fix bug #2227.
+
 2014-01-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sdas/asstm8/stm8pst.c,
